css/styles.css
/* ... */
.timeline_choices li.solution {
   background:url(../pics/timeline/solution_min.png) no-repeat;
   background-color:#9FD6ED;
   color:#425B64;
}

.timeline_box .ajax_box {
   padding-top: 25px;
}

.timeline_box .tab_cadre_fixe {
   width: 930px;
}


/** TIMELINE **/

.timeline_history {
   border-top: 1px dashed #3C5874;
   overflow: hidden;
   font-size: 12px; /*fix jqueryui ui-widget size*/
   width: 100%;
}

.timeline_history h2 {
   float: left;
}

.timeline_history .filter_timeline,
.timeline_history .filter_timeline ul,
.timeline_history .filter_timeline ul li {
   float: right;
}

.timeline_history .filter_timeline label {
   opacity: 0;
   font-size: 1.2em;
   float: left;
   line-height: 1.6em;
   font-weight: bold;
}
.timeline_history .filter_timeline:hover label {
   opacity: 1;
}
.timeline_history .filter_timeline ul li {
   opacity: 0.2;
   cursor: pointer;
}
.timeline_history .filter_timeline:hover ul li {
   opacity: 0.6;
}
.timeline_history .filter_timeline ul li:hover {
   opacity: 1;
}

.timeline_history .h_item {
   clear: both;
   padding-top: 8px;
   border-top: 1px dashed #D2D2D2;
}

.timeline_history .h_hidden {
   display: none;
}

.timeline_history .h_info {
   float: left;
   width: 25%;
   max-width: 140px;
}
.timeline_history .right .h_info {
   float: right;
}


.timeline_history .h_user,
.timeline_history .h_date {
   background-repeat: no-repeat;
   padding-left: 24px;
   padding-top: 1px;
   text-transform: capitalize;
   text-align: center;
}

.timeline_history .h_date {
   background-image: url(../pics/timeline/history.png);
   white-space: nowrap;
   margin-bottom: 10px;
   text-align: left;
   line-height: 20px;
}

.timeline_history .h_user a {
   display: inline-block;
   margin-bottom: 5px;
   vertical-align: middle;
   width: 100%;
   text-align: center;
   margin-top: 5px;
   font-size: 1.1em;
}

.timeline_history .h_user a:hover {
   text-decoration: underline;
}

.timeline_history .h_user .tooltip_picture_border {
   padding: 2px;
   border-radius: 50%;
   border: 3px inset #E7E7E7;
   _border: 3px solid #E7E7E7;
   width:51px;
   height:51px;
   position: relative;
   margin: 0 auto;
} 

.timeline_history .h_user .user_picture {
   width: 51px;
   height: 51px;
   border-radius: 50%;
}

.timeline_history .users_id_tech .user_picture {
   width: 31px;
   height: 31px;
   border-radius: 50%;
}

.timeline_history .users_id_tech .tooltip_picture_border {
   padding: 2px;
   border-radius: 50%;
   border: 3px inset #DABB7C;
   _border: 3px solid #DABB7C;
   width:31px;
   height:31px;
   position: relative;
   float: right;
} 

.timeline_history .left .h_user,
.timeline_history .left .h_date,
.timeline_history .middle .h_user,
.timeline_history .middle .h_date {
   padding-left: 24px;
   padding-right: 0;
   padding-top: 2px;
}
.timeline_history .left .h_date,
.timeline_history .middle .h_date {
   width: 100px;
   margin: 0 auto;
}

.timeline_history .h_user, 
.timeline_history .middle .h_user,
.timeline_history .left .h_user {
   padding-right: 0;
   padding-left: 0;
   padding-top: 0;
}

.timeline_history img.group_assign {
   vertical-align: bottom;
}

.timeline_history .h_content {
   max-width:50%;
   min-width: 200px;
   float: left;
   padding: 5px 5px 5px 8px;
   margin-bottom: 10px;
   min-height: 70px;
   position: relative;
   margin-right: 0;
   margin-left: 20px;
   word-wrap: break-word;
   white-space: pre-wrap;
}

.timeline_history .right .h_content {
   margin-left: 0;
   margin-right: 20px;
   float: right;
   text-align: left;
}

.timeline_history .middle .h_content {
   max-width: inherit;
   width: 69%;
}

.timeline_history .h_content:after, .timeline_history .h_content:before {
   right: 100%;
   top: 53px;
   border: solid transparent;
   content: " ";
   height: 0;
   width: 0;
   position: absolute;
   pointer-events: none;
}

.timeline_history .h_content:after {
   border-width: 8px;
   margin-top: -15px;
   border-top-color: transparent !important; 
   border-bottom-color: transparent !important; 
}


.timeline_history .right .h_content:after, 
.timeline_history .right .h_content:before {
   left: 100%;
}

.timeline_history .left .h_content:after {
   border-left-color: transparent !important; 
}
.timeline_history .left .h_content:before {
   border-left-color: transparent !important; 
}
.timeline_history .right .h_content:after {
   border-right-color: transparent !important; 
}
.timeline_history .right .h_content:before {
   border-right-color: transparent !important; 
}

.timeline_history .TicketFollowup:after            { border-color: #E0E0E0;}
.timeline_history .TicketTask:after                { border-color: #FEDA90;}
.timeline_history .Solution:after                  { border-color: #9FD6ED;}
.timeline_history .TicketValidation.status_3:after { border-color: #A1D7A2;}
.timeline_history .TicketValidation:after          { border-color: #FFFFFF;}
.timeline_history .TicketValidation.status_4:after { border-color: #D3A4A4;}

.timeline_history .private {
   width: 23px;
   float: right;
   padding-top: 18px;
   background: url(../pics/timeline/private.png) no-repeat center top;
   color: #A2A2A2;
   font-size: 0.8em;
   text-align: center;
   white-space: nowrap;
}
.timeline_history .right .private {
   float: left;
}

.timeline_history .left .h_content.timeline_active {
   border-right: 8px solid #3C5874;
}
.timeline_history .right .h_content.timeline_active {
   border-left: 8px solid #3C5874;
}

.timeline_history .h_content.TicketFollowup {
   background-color: #E0E0E0;
   color: #535353;
   background-image: url(../pics/timeline/followup.png);
   background-repeat: no-repeat;
   cursor: pointer;
}

.timeline_history .h_content.TicketTask {
   background-color: #FEDA90;
   color: #38301F;
   background-image: url(../pics/timeline/task.png);
   background-repeat: no-repeat;
   cursor: pointer;
}
/* ... */

